--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <div class="top_header">
                     <div class="link">
-                        <p>ww.jumpertheme.com</p>
+                       <a href="./index.html"><p>ww.jumpertheme.com</p></a> 
                     </div>
                     <div class="social_links">
                         <div class="link_box_1 link_box"> <a href=""><img
@@ -50,14 +50,14 @@
                 <div class="main_block">
                     <div class="nav">
                         <div class="logo">
-                            <img src="./images/logo.png" alt="">
+                          <a href="./index.html"><img src="./images/logo.png" alt=""></a>  
                         </div>
                         <div class="menu">
-                            <a class="Active" href="">home</a>
-                            <a href="">our services</a>
-                            <a href="">portfolio</a>
-                            <a href="">read blog</a>
-                            <a href="">contact</a>
+                            <a class="Active" href="./index.html">home</a>
+                            <a href="./services.html">our services</a>
+                            <a href="./portfolio.html">portfolio</a>
+                            <a href="./blog.html">read blog</a>
+                            <a href="./contact.html">contact</a>
                         </div>
     
                     </div>
