--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jumper</title>
-
+    <link rel="icon" href="images/top-icon.png" type="">
     <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
@@ -46,8 +46,8 @@
 
         <!-- welcome jumper starts -->
         <div class="background">
-            <div class="container">
-                <div class="main_block">
+           
+                <div class="main_block container">
                     <div class="nav">
                         <div class="logo">
                             <a href="./index.html"><img src="./images/logo.png" alt=""></a>  
@@ -61,7 +61,8 @@
                         </div>
 
                     </div>
-                    <div class="content">
+                    <hr class="nav_line">
+                    <div class="content container">
                         <div class="content_p1">
                             <p>jumper the stunning theme</p>
                         </div>
@@ -80,7 +81,7 @@
                     </div>
                 </div>
 
-            </div>
+            
         </div>
 
 
